# spellcrafting

./: .gitignore  ABSTRACT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_ORDER.md  README.md  main.py  pyproject.toml
.claude/agents/: worker.md
.claude/commands/: work.md  workaholic.md
docs/: api-reference.md  pydantic-validation-patterns.md
docs/design/: config.md  guardrails.md  guards.md  logging.md  output_validation.md
docs/research/: enterprise-guardrails-patterns.md  guardrails-frameworks.md  input_validation_guardrails.md
examples/: README.md  content_moderation.py  image_analysis.py  multi_env_config.py  research_assistant.py
src/mage/: __init__.py
src/magically/: __init__.py  _pydantic_ai.py  _pyproject.py  config.py  exceptions.py  guard.py  logging.py  on_fail.py  result.py  spell.py  validator.py
src/spellcrafting/: __init__.py  _pydantic_ai.py  _pyproject.py  config.py  exceptions.py  guard.py  logging.py  media.py  on_fail.py  result.py  spell.py  validator.py
tests/: conftest.py  test_config.py  test_guard.py  test_integration.py  test_logging.py  test_media.py  test_on_fail.py  test_result.py  test_smoke.py  test_spell.py  test_validator.py
