[project]
name = "magically"
version = "0.1.0"
description = "LLMs as a Python language feature"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magically"]

[tool.hatch.build.targets.sdist]
include = ["src/magically"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "smoke: tests that hit real LLM APIs",
    "internal: tests that check internal implementation details",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]
